--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "material-ui-search-bar": "^1.0.0",
     "node-sass": "^6.0.0",
     "npm": "^7.15.0",
     "react": "^17.0.2",
