--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
+    "react-svg-radar-chart": "^1.3.0",
     "sass-loader": "^10.1.1",
     "update": "^0.7.4",
     "web-vitals": "^1.1.1"
