--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chokidar": "^3.5.2",
     "clsx": "^1.1.1",
     "material-ui-search-bar": "^1.0.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^6.0.1",
     "npm": "^7.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
